# langfuse-demo

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  start.sh
.claude/agents/: codex-delegator.md  gemini-delegator.md
.claude/skills/triple-review/: SKILL.md  comment-examples.md
.playwright-mcp/: page-2026-06-26T12-01-14-442Z.yml  page-2026-06-26T12-01-38-198Z.yml
data/: README.md
docs/: PO_PM.md  improvement-ideas.md  v3-session-plan.md
docs/slides-html/: 00-workshop-overview.html  01-langfuse-tour.html  02-tracing-v1.html  03-tracing-v2.html  04-evaluation-datasets.html  05-ai-assisted-coding.html  README.md
docs/slides-html/po-pm/: 00-po-overview.html  01-genai-in-po-pm.html  02-build-your-rubric.html  02-quality-criteria.html  03-langfuse-for-pos.html  04-reading-the-evidence.html  05-datasets-scoring-gate.html
docs/slides-md/: 00-workshop-overview.md  01-langfuse-tour.md  02-tracing-v1.md  03-tracing-v2.md  04-evaluation-datasets.md  05-ai-assisted-coding.md  README.md
frontend/: app.js  chat.js  index.html  style.css
plan/: demo-spec.md
scripts/: run_experiment.py  seed_dataset.py
src/rag/: agent.py  app.py  config.py  pipeline.py  tracing.py
src/rag/ingestion/: embed.py  ingest.py  parse.py
src/rag/migrations/: 001_initial.sql  run.py
src/rag/retrieval/: repository.py
tests/: test_pipeline.py
workshop/: README.md  RUNBOOK.md  generate_traffic.py  questions.json
