[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings==2.9.*",
    "psycopg[binary]==3.2.*",
    "pgvector==0.3.*",
    "pypdf==5.*",
    "litellm==1.*",
    "pydantic-ai[web]==2.*",
    "langfuse==2.*",
]

[project.scripts]
rag-ingest = "rag.ingestion.ingest:main"
rag-migrate = "rag.migrations.run:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src", "tests"]
python_files = ["*_test.py", "test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
